# norsys-workspaces

./: .gitignore  .gitlab-ci.yml  CADRAGE.md  README.md  package-lock.json  package.json  plan.md
.githooks/: pre-commit
.github/workflows/: release.yml
example/: README.md  docker-compose.yaml
example/backend/: .env  package-lock.json  package.json  server.js
example/docs/: README.md
example/frontend/: package-lock.json  package.json  vite.config.js
example/frontend/src/: main.js
public/: splashscreen.html
src/: App.vue  main.ts  router.ts  types.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: documentation.rs  env_manager.rs  lib.rs  main.rs  orchestrator.rs  persistence.rs  snapshot_manager.rs  system_stats.rs  workspace_loader.rs
src-tauri/src/orchestrator/: mod.rs  tests.rs
src-tauri/windows/: installer-hooks.nsh
src/components/: StatusIndicator.vue
src/components/dashboard/: RightPanel.vue  ServiceTable.vue  StatCard.vue  (+1 more)
src/icons/: angular.vue  csharp.vue  database.vue  golang.vue  java.vue  js.vue  mariadb.vue  mysql.vue  nodejs.vue  php.vue  postgres.vue  python.vue  react.vue  redis.vue  svelte.vue  ts.vue  vue.vue  web.vue
src/layouts/: DefaultLayout.vue
src/stores/: documentation.ts  logs.ts  networks.ts  notifications.ts  runtime.ts  settings.ts  volumes.ts  workspaces.ts
src/views/: CreateWorkspaceView.vue  HomeView.vue  ImagesView.vue  LogsView.vue  NetworksView.vue  ServicesView.vue  TerminalView.vue  VolumesView.vue  WorkspaceDetailView.vue  WorkspacesView.vue
(+4 files in other folders)
