[package]
name = "dev-workspace-manager"
version = "0.4.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dev_workspace_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-fs = "2.5.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.1"
serde_yaml = "0.9.34"
directories = "6.0.0"
tokio = { version = "1.52.3", features = ["process", "macros", "rt-multi-thread"] }
bollard = "0.21.0"
tauri-plugin-updater = "2.3.0"
tauri-plugin-process = "2.3.1"
whoami = "1.5"
sysinfo = "0.33"
windows = {
    version = "0.58",
    features = [
        "UI_ViewManagement",
        "Foundation"
    ]
}

